@@ -14,4 +14,3 @@ HISTORY
 
 SEE ALSO
         send_udp(E), query_udp_port(E)
-
