@@ -20,12 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 117)
-(Parent-Version lpmud 3-3 116)
-(Version-Log "Removed a crasher from the flush formatting in sprintf.")
+(Project-Version lpmud 3-3 118)
+(Parent-Version lpmud 3-3 117)
+(Version-Log "Fixed crasher in actions.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 18 Oct 2001 22:41:30 -0600")
+(Checkin-Time "Sun, 21 Oct 2001 21:47:23 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -58,7 +58,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.4 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.29 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.180 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.181 644))
   (HISTORY (lpmud/f/49_HISTORY 1.213 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.13 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -107,7 +107,7 @@
   (src/access_check.c (lpmud/d/14_access_che 1.15.1.3 644))
   (src/alloca.c (lpmud/d/13_alloca.c 1.10 644))
   (src/actions.h (lpmud/D/11_actions.h 1.6.1.4 644))
-  (src/actions.c (lpmud/D/12_actions.c 1.15.1.26 644))
+  (src/actions.c (lpmud/D/12_actions.c 1.15.1.27 644))
   (src/array.h (lpmud/f/47_array.h 1.18.1.15 644))
   (src/array.c (lpmud/d/12_array.c 1.46.1.31 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.3 644))
@@ -809,10 +809,10 @@
   (doc/efun/efun (lpmud/o/28_efun 1.7 644))
   (doc/efun/enable_commands (lpmud/o/29_enable_com 1.1.1.2 644))
   (doc/efun/environment (lpmud/l/28_environmen 1.4 644))
-  (doc/efun/exec (lpmud/h/43_exec 1.1.1.2 644))
+  (doc/efun/exec (lpmud/h/43_exec 1.1.1.3 644))
   (doc/efun/execute_command (lpmud/D/28_execute_co 1.4 644))
   (doc/efun/exp (lpmud/o/30_exp 1.2.1.2 644))
-  (doc/efun/expand_define (lpmud/o/31_expand_def 1.2 644))
+  (doc/efun/expand_define (lpmud/o/31_expand_def 1.3 644))
   (doc/efun/explode (lpmud/o/32_explode 1.2 644))
   (doc/efun/export_uid (lpmud/o/33_export_uid 1.3 644))
   (doc/efun/extern_call (lpmud/o/34_extern_cal 1.2 644))
@@ -1081,7 +1081,7 @@
   (doc/master/query_allow_shadow (lpmud/s/15_query_allo 1.2 644))
   (doc/master/quota_demon (lpmud/s/17_quota_demo 1.2 644))
   (doc/master/reactivate_destructed_master (lpmud/s/18_reactivate 1.2 644))
-  (doc/master/receive_udp (lpmud/s/19_receive_im 1.1.1.3 644))
+  (doc/master/receive_udp (lpmud/s/19_receive_im 1.1.1.4 644))
   (doc/master/remove_player (lpmud/s/20_remove_pla 1.2 644))
   (doc/master/retrieve_ed_setup (lpmud/s/21_retrieve_e 1.2 644))
   (doc/master/runtime_error (lpmud/s/22_runtime_er 1.1.1.2 644))
